added tools used

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ layout: landing
 		<div class="content">
 			<h2>2016 Graduation Poster</h2>
 			<h4>2016</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Adobe Photoshop, Paper Planes - Adobe Illustrator.</p>
 		</div>
 	</section>
 
@@ -258,7 +258,7 @@ layout: landing
 		<div class="content">
 			<h2>Vice Poster</h2>
 			<h4>2016</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Adobe Photoshop.</p>
 		</br><h3>References and Inspiration</h3>
 			<a href="images/vice1.jpg"><img src="images/vice1.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/vice2.jpg"><img src="images/vice2.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -274,7 +274,7 @@ layout: landing
 		<div class="content">
 			<h2>Neon Poster</h2>
 			<h4>2016</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Adobe Photoshop.</p>
 		</div>
 	</section>
 
@@ -286,7 +286,7 @@ layout: landing
 		<div class="content">
 			<h2>Witcher Poster</h2>
 			<h4>2014</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Adobe Photoshop.</p>
 		</div>
 	</section>
 
@@ -298,7 +298,7 @@ layout: landing
 		<div class="content">
 			<h2>Black Waves Poster</h2>
 			<h4>2015</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Adobe Photoshop.</p>
 		</br><h3>Inspiration</h3>
 			<a href="images/waves.jpg"><img src="images/waves.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
@@ -312,7 +312,7 @@ layout: landing
 		<div class="content">
 			<h2>Gestalt logo “Peak”</h2>
 			<h4>2015</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Adobe Photoshop.</p>
 		</div>
 	</section>
 </section>
@@ -335,7 +335,7 @@ layout: landing
 		<div class="content">
 			<h2>Pako Commerce</h2>
 			<h4>2016</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: WYSIWYG editor, Adobe Photoshop.</p>
 		</div>
 	</section>
 
@@ -347,7 +347,7 @@ layout: landing
 		<div class="content">
 			<h2>Techsmart</h2>
 			<h4>2016</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: WYSIWYG editor, Adobe Photoshop, Adobe Illustrator.</p>
 		</div>
 	</section>
 
