added witcher materials

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ layout: landing
 			<h2>Vice Poster</h2>
 			<h4>2016</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Adobe Photoshop.</p>
-		</br><h3>References and Inspiration</h3>
+		</br><h3>Materials</h3>
 			<a href="images/vice1.jpg"><img src="images/vice1.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/vice2.jpg"><img src="images/vice2.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/vice3.jpg"><img src="images/vice3.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -287,6 +287,14 @@ layout: landing
 			<h2>Witcher Poster</h2>
 			<h4>2014</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Adobe Photoshop.</p>
+		</br><h3>Materials</h3>
+			<a href="images/witcher (1).jpg"><img src="images/witcher (1).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/witcher (1).png"><img src="images/witcher (1).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/witcher (2).jpg"><img src="images/witcher (2).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/witcher (2).png"><img src="images/witcher (2).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/witcher (3).jpg"><img src="images/witcher (3).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/witcher (4).jpg"><img src="images/witcher (4).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/witcher (5).jpg"><img src="images/witcher (5).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
 	</section>
 
@@ -299,7 +307,7 @@ layout: landing
 			<h2>Black Waves Poster</h2>
 			<h4>2015</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Adobe Photoshop.</p>
-		</br><h3>Inspiration</h3>
+		</br><h3>Materials</h3>
 			<a href="images/waves.jpg"><img src="images/waves.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
 	</section>
