--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: landing
 		<header class="major">
 			<h2 style="color:#333;">Arcu aliquet vel lobortis ata nisl<br />
 								eget augue amet aliquet nisl cep donec</h2>
-			<p style="color:#333;">Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br /> fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+			<p style="color:#333;">Ever since I was little, I have been interested in creative work. <br /> I am currently studying in a Private High School for Multimedia, Computer Graphic Design and Animation. <br /> Much of the work you will see here are projects made for the school in question. <br /> Out of all the things I have worked on, 3D Models seem to interest me the most. <br /> Ever since I started studying 3D Modelling and Animation, it has become a sort of passion of mine. <br /> My current plans are to graduate, expand my knowledge in the CGI field by getting an Animation Degree and turning my interest into a career.</p>
 		</header>
 		<!-- <ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
