--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ layout: landing
 <section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
 	<div class="inner">
 		<header class="major">
-			<h2 style="color:#333;">Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
+			<h2 style="color:#333;">My name is Edward Vesselinov Jivkov<br />
+								and I am a beginner 3D Modeler and Graphics Designer</h2>
 			<p style="color:#333;">Ever since I was little, I have been interested in creative work. <br /> I am currently studying in a Private High School for Multimedia, Computer Graphic Design and Animation. <br /> Much of the work you will see here are projects made for the school in question. <br /> Out of all the things I have worked on, 3D Models seem to interest me the most. <br /> Ever since I started studying 3D Modelling and Animation, it has become a sort of passion of mine. <br /> My current plans are to graduate, expand my knowledge in the CGI field by getting an Animation Degree and turning my interest into a career.</p>
 		</header>
 		<!-- <ul class="icons major">
