--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ layout: landing
 			<h2>Techsmart</h2>
 			<h4>2016</h4>
 			<p>A concept website for a specialized hypermarket that sells electronic appliances and all things technology. The website uses elements from real electric appliance stores namely Technopolis. <br> The site has two menus: Top Row Menu – Here you can learn more about the company itself, where the stores are located, news and events, all of the different promotions currently running, job opportunities, leasing policies and contact information, should you need it. <br> The other Menu is the Main Menu – Here you can see all of the products that the company is selling, split up into 9 different categories (Computers, Periphery, Telephones and Tablets, Television sets, Photo and Video, Electrical Appliances, Audio, Fun, Auto) which are then divided into subcategories. <br> The front page is occupied with promotions – the top section is for big promotions and deals and the bottom one is for minor ones. Both are dynamic and have an auto-scroll, which shows all of the current sales. 
-			</br> The Logo was created using Adobe Illustrator and the images used were touched up using Adobe Photoshop</br>	
+			</br> The Logo was created using Adobe Illustrator and the images used were touched up using Adobe Photoshop.
 </br>Tools: WYSIWYG editor, Adobe Photoshop, Adobe Illustrator.</p>
 		</div>
 	</section>
