--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ layout: landing
 		<div class="content">
 			<h2>Handcuffs</h2>
 			<h4>2015</h4>
-			<p>The all-known police handcuffs used in numerous movies and shows.</br>Tools: Model - 3Ds Max.</p>
+			<p>A pair of police handcuffs that have become common place in numerous crime movies and shows. The model is an almost 1:1 replica of the BladesUSA 4508-DLB Double Lock Handcuffs with minor differences – the swivels and chain are different and the black metal is swapped out with a more clean chrome finish. </br>Tools: Model - 3Ds Max.</p>
 		</br><h3>Reference</h3>
 			<a href="images/cuffs_ref.jpg"><img src="images/cuffs_ref.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
