--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ layout: landing
 		<div class="content">
 			<h2>Saw</h2>
 			<h4>2015</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.<br>Tools: Model - 3Ds Max.</p>
+			<p>A vintage Sadvik hand saw with a rusty and run-down look. The rusty effect is achieved using a Normal Map of the rust texture and the Roughness Map of the metal texture. The Wood wear effects on the handle were created using a Normal Map of the black marble texture.<br>Tools: Model - 3Ds Max.</p>
 		</br><h3>Reference and Textures</h3>
 			<a href="images/saw_ref.png"><img src="images/saw_ref.png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Saw-(1).jpg"><img src="images/Saw-(1).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -128,7 +128,7 @@ layout: landing
 		<div class="content">
 			<h2>Lego Pilot</h2>
 			<h4>2017</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Model - 3Ds Max, Textures - Adobe Illustrator.</p>
+			<p>The model is an authentic reproduction of the Lego Series 3 Old Timer Pilot Mini-figure. The base body and head were created with the help of the official Lego Mini-Figure patented technical plans with accurate dimensions. The textures were traced very carefully and accurately from a reference in Adobe Illustrator.</br>Tools: Model - 3Ds Max, Textures - Adobe Illustrator.</p>
 		</br><h3>Reference and Textures</h3>
 			<a href="images/Lego (1).png"><img src="images/Lego (1).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Lego (2).png"><img src="images/Lego (2).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -152,7 +152,7 @@ layout: landing
 		<div class="content">
 			<h2>Table</h2>
 			<h4>2015</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Model - 3Ds Max.</p>
+			<p>Model of a table complete with two stacked plates, a Pear fruit, a wine bottle and a wine glass, utensils – a knife, a spoon and a fork. Meant to show off what the powerful cloth physics in 3ds Max can do.</br>Tools: Model - 3Ds Max.</p>
 		</br><h3>Textures</h3>
 			<a href="images/Table (1).png"><img src="images/Table (1).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Table (2).png"><img src="images/Table (2).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -258,7 +258,7 @@ layout: landing
 		<div class="content">
 			<h2>Vice Poster</h2>
 			<h4>2016</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Adobe Photoshop.</p>
+			<p>A collage of existing artwork and elements meant to replicate the infamous Loading Screens from the game Grand Theft Auto: Vice City with a little spin – the postcard look. The background leaves were created using a mix of Adobe Photoshop Gradient Maps and Blend Modes. The artwork used is as follows: Tommy Vercetti by PatrickBrown, Text by Michael Douglas.</br>Tools: Adobe Photoshop.</p>
 		</br><h3>Materials</h3>
 			<a href="images/vice1.jpg"><img src="images/vice1.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/vice2.jpg"><img src="images/vice2.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -286,7 +286,7 @@ layout: landing
 		<div class="content">
 			<h2>Witcher Poster</h2>
 			<h4>2014</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Adobe Photoshop.</p>
+			<p>Video game poster for the game The Witcher 3: Wild Hunt made using existing high quality renders released by the game developers – CD Project Red.</br>Tools: Adobe Photoshop.</p>
 		</br><h3>Materials</h3>
 			<a href="images/witcher (1).jpg"><img src="images/witcher (1).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/witcher (1).png"><img src="images/witcher (1).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -320,7 +320,7 @@ layout: landing
 		<div class="content">
 			<h2>Gestalt logo “Peak”</h2>
 			<h4>2015</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Adobe Photoshop.</p>
+			<p>A Logo for a fictional outdoor gear and apparel company. Created with basic polygon raster shapes in Adobe Photoshop. The mist was conceived using the Photoshop Filter Render Clouds and Overlay Blend Mode.  The text is gradient mapped and uses the ISOCTEUR font.</br>Tools: Adobe Photoshop.</p>
 		</div>
 	</section>
 </section>
@@ -343,7 +343,7 @@ layout: landing
 		<div class="content">
 			<h2>Pako Commerce</h2>
 			<h4>2016</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: WYSIWYG editor, Adobe Photoshop.</p>
+			<p>A concept website made for my father’s company.  The site features a Menu with three buttons: About us – Information about the company, Services – Services that the company provides, Premises – What and where the shops and establishments are on the building grounds. There is also a contact button, which leads to the contact page and a website visit counter on the bottom left. The site’s background is an edited version of a free black polygon vector background by Vectorss. The logo was designed using raster shapes in Adobe Photoshop.</br>Tools: WYSIWYG editor, Adobe Photoshop.</p>
 		</div>
 	</section>
 
