--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ layout: landing
 		<div class="content">
 			<h2>Shark</h2>
 			<h4>2016</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Model - 3Ds Max, Textures - Adobe Photoshop.</p>
+			<p>A original design of a cartoon style shark. Created from pencil to paper references. Fully UV unwrapped and rigged for Animation.</br>Tools: Model - 3Ds Max, Textures - Adobe Photoshop.</p>
 		</br><h3>Reference and Textures</h3>
 			<a href="images/shark.jpg"><img src="images/shark.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/shark_2.jpg"><img src="images/shark_2.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
