--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ layout: landing
 		<div class="content">
 			<h2>Computer Monitors</h2>
 			<h4>2016</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Model - 3Ds Max.</p>
+			<p>Models of a pair of military grade CRT Monitors. The off-white colors give the models an old and worn aesthetic. Inspired by 80’s/90’s Cyberpunk.</br>Tools: Model - 3Ds Max.</p>
 		</div>
 	</section>
 
