added new materials and texts

--- a/index.html
+++ b/index.html
@@ -17,15 +17,13 @@ layout: landing
 <section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
 	<div class="inner">
 		<header class="major">
-			<h2 style="color:#333;">Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-			<p style="color:#333;">Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br /> fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+			<h2 style="color:#333;">I AM EDWARD VESSELINOV JIVKOV<br />
+								A NOVICE 3D MODELER AND GRAPHIC DESIGNER</h2>
+			<p style="color:#333;">Ever since I was little, I have been interested in creative work.</br>
+				I am currently studying in the Private High School for Multimedia, Computer Graphic Design and Animation in Sofia, Bulgaria, and my current portoflio consists of the projects I have made while studying here.</br>
+				Out of all the things I have worked on, 3D Models seem to interest me the most, and it has become a passion of mine.</br>
+				My current plans are to graduate, expand my knowledge in the CGI field by getting an Animation Degree and turning my interest into a career.</p>
 		</header>
-		<!-- <ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul> -->
 	</div>
 </section>
 
@@ -49,8 +47,10 @@ layout: landing
 		<div class="content">
 			<h2>Vietnam War Helmet</h2>
 			<h4>2015</h4>
-			<p>A 3D model of a helmet based on the M1 helmet - a combat helmet that was used by the United States military from World War II until 1985. The helmet has added personal touches of it's wearer – little metal trinkets, a card, a flip lighter and a couple of 7.62 Rifle Rounds. The camo pattern used is the infamous Mitchell pattern, which was used heavily during The Vietnam War era.</br>Tools: Model - 3Ds Max.</p>
-		</br><h3>Materials</h3>
+			<p>A 3D model of a helmet based on the M1 helmet - a combat helmet that was used by the United States military from World War II until 1985. The helmet has added personal touches of it's wearer – little metal trinkets, a card, a flip lighter and a couple
+				of 7.62 Rifle Rounds. The camo pattern used is the infamous Mitchell pattern, which was used heavily during The Vietnam War era.</br>Tools: Model - 3Ds Max.</p>
+			</br>
+			<h3>Materials</h3>
 			<a href="images/Helmet-(1).jpg"><img src="images/Helmet-(1).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Helmet-(2).jpg"><img src="images/Helmet-(2).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Helmet-(3).jpg"><img src="images/Helmet-(3).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -67,7 +67,8 @@ layout: landing
 			<h2>Handcuffs</h2>
 			<h4>2015</h4>
 			<p>The all-known police handcuffs used in numerous movies and shows.</br>Tools: Model - 3Ds Max.</p>
-		</br><h3>Reference</h3>
+			</br>
+			<h3>Reference</h3>
 			<a href="images/cuffs_ref.jpg"><img src="images/cuffs_ref.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
 	</section>
@@ -110,7 +111,8 @@ layout: landing
 			<h2>Saw</h2>
 			<h4>2015</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.<br>Tools: Model - 3Ds Max.</p>
-		</br><h3>Reference and Textures</h3>
+			</br>
+			<h3>Reference and Textures</h3>
 			<a href="images/saw_ref.png"><img src="images/saw_ref.png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Saw-(1).jpg"><img src="images/Saw-(1).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Saw-(2).jpg"><img src="images/Saw-(2).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -129,7 +131,8 @@ layout: landing
 			<h2>Lego Pilot</h2>
 			<h4>2017</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Model - 3Ds Max, Textures - Adobe Illustrator.</p>
-		</br><h3>Reference and Textures</h3>
+			</br>
+			<h3>Reference and Textures</h3>
 			<a href="images/Lego (1).png"><img src="images/Lego (1).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Lego (2).png"><img src="images/Lego (2).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/lego_ref(1).jpg"><img src="images/lego_ref(1).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -153,7 +156,8 @@ layout: landing
 			<h2>Table</h2>
 			<h4>2015</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Model - 3Ds Max.</p>
-		</br><h3>Textures</h3>
+			</br>
+			<h3>Textures</h3>
 			<a href="images/Table (1).png"><img src="images/Table (1).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Table (2).png"><img src="images/Table (2).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Table (3).png"><img src="images/Table (3).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -171,7 +175,8 @@ layout: landing
 			<h2>Glock-17 Pistol</h2>
 			<h4>2017</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Model - 3Ds Max.</p>
-		</br><h3>Reference and Textures</h3>
+			</br>
+			<h3>Reference and Textures</h3>
 			<a href="images/glock.jpg"><img src="images/glock.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/glock_ref1.jpg"><img src="images/glock_ref1.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/glock_ref2.jpg"><img src="images/glock_ref2.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -181,14 +186,15 @@ layout: landing
 	<section class="spotlight">
 		<div class="image">
 			<div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="700" height="600" src="https://sketchfab.com/models/f385ed0ebb8c45f38ae2310b17c40d5b/embed?autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
-						webkitallowfullscreen="true" onmousewheel=""></iframe>
+				    webkitallowfullscreen="true" onmousewheel=""></iframe>
 			</div>
 		</div>
 		<div class="content">
 			<h2>Shark</h2>
 			<h4>2016</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Model - 3Ds Max, Textures - Adobe Photoshop.</p>
-		</br><h3>Reference and Textures</h3>
+			</br>
+			<h3>Reference and Textures</h3>
 			<a href="images/shark.jpg"><img src="images/shark.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/shark_2.jpg"><img src="images/shark_2.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
@@ -259,10 +265,12 @@ layout: landing
 			<h2>Vice Poster</h2>
 			<h4>2016</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Adobe Photoshop.</p>
-		</br><h3>Materials</h3>
+			</br>
+			<h3>Materials</h3>
 			<a href="images/vice1.jpg"><img src="images/vice1.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/vice2.jpg"><img src="images/vice2.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/vice3.jpg"><img src="images/vice3.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/vice4.jpg"><img src="images/vice4.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
 	</section>
 
@@ -275,6 +283,9 @@ layout: landing
 			<h2>Neon Poster</h2>
 			<h4>2016</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Adobe Photoshop.</p>
+			</br>
+			<h3>Materials</h3>
+			<a href="images/neon2.jpg"><img src="images/neon2.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
 	</section>
 
@@ -287,14 +298,15 @@ layout: landing
 			<h2>Witcher Poster</h2>
 			<h4>2014</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Adobe Photoshop.</p>
-		</br><h3>Materials</h3>
+			</br>
+			<h3>Materials</h3>
 			<a href="images/witcher (1).jpg"><img src="images/witcher (1).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/witcher (1).png"><img src="images/witcher (1).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/witcher (2).jpg"><img src="images/witcher (2).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/witcher (2).png"><img src="images/witcher (2).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/witcher (3).jpg"><img src="images/witcher (3).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/witcher (4).jpg"><img src="images/witcher (4).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
-			<a href="images/witcher (5).jpg"><img src="images/witcher (5).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/witcher (5).jpg"><img src="images/witcher (5g).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
 	</section>
 
@@ -307,14 +319,15 @@ layout: landing
 			<h2>Black Waves Poster</h2>
 			<h4>2015</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Adobe Photoshop.</p>
-		</br><h3>Materials</h3>
+			</br>
+			<h3>Materials</h3>
 			<a href="images/waves.jpg"><img src="images/waves.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
 	</section>
 
 	<section class="spotlight">
 		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/peak (1).jpg" alt=""></div>
+			<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/peak.png" alt=""></div>
 		</div>
 
 		<div class="content">
@@ -368,48 +381,18 @@ layout: landing
 <section id="three" class="wrapper style3 special">
 	<div class="inner">
 		<header class="major">
-			<h2>Accumsan mus tortor nunc aliquet</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br /> fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+			<h2>Contact Me</h2>
+			<p>Get in touch by any of these:</p>
 		</header>
 		<ul class="features">
 			<li class="icon fa-paper-plane-o">
-				<h3>Arcu accumsan</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+				<h3>Email</h3>
+				<p>edijivkov@gmail.com</p>
 			</li>
 			<li class="icon fa-laptop">
-				<h3>Ac Augue Eget</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-			</li>
-			<li class="icon fa-code">
-				<h3>Mus Scelerisque</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-			</li>
-			<li class="icon fa-headphones">
-				<h3>Mauris Imperdiet</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-			</li>
-			<li class="icon fa-heart-o">
-				<h3>Aenean Primis</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-			</li>
-			<li class="icon fa-flag-o">
-				<h3>Tortor Ut</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+				<h3>Github</h3>
+				<p>https://github.com/edijivkov</p>
 			</li>
 		</ul>
 	</div>
 </section>
-
-<!-- CTA
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
-							</header>
-							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
-							</ul>
-						</div>
-					</section>-->
