--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ layout: landing
 		<div class="content">
 			<h2>2016 Graduation Poster</h2>
 			<h4>2016</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Adobe Photoshop, Paper Planes - Adobe Illustrator.</p>
+			<p>A Poster made for a school contest. The goal of the contest was to make a poster to send off the high school graduates and wish them well. The poster was among the winners and was hanged in the school corridors. Later it was moved to the school’s administration office and remains there to this day.</br>Tools: Adobe Photoshop, Paper Planes - Adobe Illustrator.</p>
 		</div>
 	</section>
 
