--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: landing
 		<header class="major">
 			<h2 style="color:#333;">I am Edward Vesselinov Jivkov<br />
 								A beginner 3D Modeler and Graphics Designer</h2>
-			<p style="color:#333;">Ever since I was little, I have been interested in creative work, and I am currently studying in theh Private High School for Multimedia, Computer Graphic Design and Animation in Sofia, Bulgaria. <br /> Much of the works in my porfolio are made while studying here. <br /> Out of all the things I have worked on, 3D Models seem to interest me the most, and since I started studying 3D Modelling and Animation, it has become a passion of mine. <br /> My current plans are to graduate, expand my knowledge in the CGI field by getting an Animation Degree and turning my interest into a career.</p>
+			<p style="color:#333;">Ever since I was little, I have been interested in creative work, and I am currently studying in a Private High School for Multimedia, Computer Graphic Design and Animation in Sofia, Bulgaria. <br /> Much of the works in my porfolio are made while studying here. <br /> Out of all the things I have worked on, 3D Models seem to interest me the most, and since I started studying 3D Modelling and Animation, it has become a passion of mine. <br /> My current plans are to graduate, expand my knowledge in the CGI field by getting an Animation Degree and turning my interest into a career.</p>
 		</header>
 		<!-- <ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
