--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ layout: landing
 		<div class="content">
 			<h2>Guitar</h2>
 			<h4>2016</h4>
-			<p>A fully 3D AutoCAD Drawing of a Acoustic Guitar complete with strings.</br>Tools: Model - AutoCAD.</p>
+			<p>A fully 3D AutoCAD Drawing of an Acoustic Guitar complete with strings.</br>Tools: Model - AutoCAD.</p>
 		</div>
 	</section>
 </section>
