--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ layout: landing
 		<div class="content">
 			<h2>Witcher Poster</h2>
 			<h4>2014</h4>
-			<p>Video game poster for the game The Witcher 3: Wild Hunt made using existing high quality renders released by the game developers – CD Project Red.</br>Tools: Adobe Photoshop.</p>
+			<p>Video game poster for the game The Witcher 3: Wild Hunt made using existing high quality renders released by the game developers –CD PROJEKT RED.</br>Tools: Adobe Photoshop.</p>
 		</br><h3>Materials</h3>
 			<a href="images/witcher (1).jpg"><img src="images/witcher (1).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/witcher (1).png"><img src="images/witcher (1).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
