--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ layout: landing
 		<div class="content">
 			<h2>Vietnam War Helmet</h2>
 			<h4>2015</h4>
-			<p>A 3D model of a helmet based on the M1 helmet - a combat helmet that was used by the United States military from World War II until 1985. The helmet has added personal touches from it's wearer – little metal trinkets, a card, a flip lighter and a couple of 7.62 Rifle Rounds. The camo pattern used is the infamous Mitchell pattern, which was used heavily during The Vietnam War era.</br>Tools: Model - 3Ds Max.</p>
+			<p>A 3D model of a helmet based on the M1 helmet - a combat helmet that was used by the United States military from World War II until 1985. The helmet has added personal touches from it's wearer – little metal trinkets, a card, a flip lighter and a couple of 7.62 mm Rifle Rounds. The camo pattern used is the infamous Mitchell pattern, which was used heavily during The Vietnam War era.</br>Tools: Model - 3Ds Max.</p>
 		</br><h3>Materials</h3>
 			<a href="images/Helmet-(1).jpg"><img src="images/Helmet-(1).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Helmet-(2).jpg"><img src="images/Helmet-(2).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
