--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ layout: landing
 		<div class="content">
 			<h2>Black Waves Poster</h2>
 			<h4>2015</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Adobe Photoshop.</p>
+			<p>A stylized black and white poster meant to replicate the aesthetic of monochrome comic books. The poster, like many black and white works, focuses heavily on contrast. The waves are a pen and ink on paper drawing called The Sea/Fado 2.1 created by Johan Grönlund.  The border was achieved with the use of basic raster shapes and Blending Modes.</br>Tools: Adobe Photoshop.</p>
 		</br><h3>Materials</h3>
 			<a href="images/waves.jpg"><img src="images/waves.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
