--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ layout: landing
 		<div class="content">
 			<h2>Glock-17 Pistol</h2>
 			<h4>2017</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Model - 3Ds Max.</p>
+			<p>A model of a standard issue Glock-17 made by Glock Ges.m.b.H, a staple of any action film or video game, the Glock has a simple, effective design and is instantly recognizable. The main reference for the model comes from the official Glock Website that happens to have a 360 panorama of the gun.</br>Tools: Model - 3Ds Max.</p>
 		</br><h3>Reference and Textures</h3>
 			<a href="images/glock.jpg"><img src="images/glock.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/glock_ref1.jpg"><img src="images/glock_ref1.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -289,7 +289,7 @@ layout: landing
 		<div class="content">
 			<h2>Witcher Poster</h2>
 			<h4>2014</h4>
-			<p>Video game poster for the game The Witcher 3: Wild Hunt made using existing high quality renders released by the game developers –CD PROJEKT RED.</br>Tools: Adobe Photoshop.</p>
+			<p>Video game poster for the game The Witcher 3: Wild Hunt made using existing high quality renders released by the game developers – CD PROJEKT RED.</br>Tools: Adobe Photoshop.</p>
 		</br><h3>Materials</h3>
 			<a href="images/witcher (1).jpg"><img src="images/witcher (1).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/witcher (1).png"><img src="images/witcher (1).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
