--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ layout: landing
 		<div class="content">
 			<h2>Neon Poster</h2>
 			<h4>2016</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Adobe Photoshop.</p>
+			<p>A collage poster that represents the neo-tokyo art style, combined with a black silhouette in the middle, giving the background a more seliant accent. The background pictured is a popular street in Kowloon, Hong Kong named Portland Street. The images and clip art used were edited using Adobe Photoshop’s Gradient Maps.</br>Tools: Adobe Photoshop.</p>
 		</br><h3>Materials</h3>
 			<a href="images/neon2.jpg"><img src="images/neon2.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
