--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ layout: landing
 
 
 <!-- Three -->
-<section id="three" class="wrapper style3 special">
+<section id="three" class="wrapper style3 special" style="background-image: url('images/contact_bg.jpg');">
 	<div class="inner">
 		<header class="major">
 			<h2>Contact Me</h2>
