--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ layout: landing
 		<div class="content">
 			<h2>Guitar</h2>
 			<h4>2016</h4>
-			<p>A fully 3D AutoCAD Drawing of an Acoustic Guitar complete with strings.</br>Tools: Model - AutoCAD.</p>
+			<p>A fully 3D AutoCAD Drawing of an Acoustic Guitar complete with strings. Conceived using simple drawing elements, namely Circles, Lines, Ellipses, Rectangles, and Polylines. A lot of modifiers are also used: Trim, Mirror, Offset, Extrude, Subtract, Union and Fillet. </br>Tools: Model - AutoCAD.</p>
 		</div>
 	</section>
 </section>
