--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@ layout: landing
 		<div class="content">
 			<h2>Desk Lamp</h2>
 			<h4>2015</h4>
-			<p>A classic, rustic 20th century desk lamp with a photorealistic light bulb. </br>Tools: Model - 3Ds Max.</p>
+			<p>A classic, rustic 20th century desk lamp with a photorealistic light bulb. Inspired by Noir films, the desk lamp is the type you would find sitting on some detective’s desk somewhere. 
+The lightbulb was taken from an external source, which can be found <a href="http://blog.naver.com/PostList.nhn?blogId=fox32330&from=postList&categoryNo=1#">here</a>  </br>Tools: Model - 3Ds Max.</p>
 		</div>
 	</section>
 
