--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@ layout: landing
 		<h2 style="font-size:2.4em;">{{ site.title }}</h2>
 		<p style="font-family:'dosis' !important; font-size:2em !important;">Portfolio</p>
 		<ul class="actions">
-			<!-- <li><a href="#" class="button special">Activate</a></li> -->
 		</ul>
 	</div>
 	<a href="#one" class="more scrolly">Learn More</a>
@@ -17,20 +16,15 @@ layout: landing
 <section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
 	<div class="inner">
 		<header class="major">
-			<h2 style="color:#333;">I am Edward Vesselinov Jivkov<br />
+			<h2 style="color:#333;">I am Edward Vesselinov Jivkov</br>
 								A beginner 3D Modeler and Graphics Designer</h2>
 			<p style="color:#333;">Ever since I was little, I have been interested in creative work, and I am currently studying in a Private High School for Multimedia, Computer Graphic Design and Animation in Sofia, Bulgaria. <br /> Much of the works in my porfolio are made while studying here. <br /> Out of all the things I have worked on, 3D Models seem to interest me the most, and since I started studying 3D Modelling and Animation, it has become a passion of mine. <br /> My current plans are to graduate, expand my knowledge in the CGI field by getting an Animation Degree and turning my interest into a career.</p>
 		</header>
-		<!-- <ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul> -->
 	</div>
 </section>
 
 
-<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
+<section id="one 3d" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
 	<div class="inner">
 		<header class="major">
 			<h1 style="color:#333;">3D Models</h1>
@@ -196,7 +190,7 @@ The lightbulb was taken from an external source, which can be found <a href="htt
 	</section>
 </section>
 
-<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
+<section id="one cad" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
 	<div class="inner">
 		<header class="major">
 			<h1 style="color:#333;">CAD Models</h1>
@@ -231,7 +225,7 @@ The lightbulb was taken from an external source, which can be found <a href="htt
 	</section>
 </section>
 
-<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
+<section id="one gd" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
 	<div class="inner">
 		<header class="major">
 			<h1 style="color:#333;">Graphic Design</h1>
@@ -330,7 +324,7 @@ The lightbulb was taken from an external source, which can be found <a href="htt
 </section>
 
 
-<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
+<section id="one wd" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
 	<div class="inner">
 		<header class="major">
 			<h1 style="color:#333;">Web Design</h1>
@@ -371,7 +365,7 @@ The lightbulb was taken from an external source, which can be found <a href="htt
 
 
 <!-- Three -->
-<section id="three" class="wrapper style3 special" style="background-image: url('images/contact_bg.jpg');">
+<section id="three" class="wrapper style3 special" style="background-image: url('images/contact_bg.jpg'); opacity: 0.7;">
 	<div class="inner">
 		<header class="major">
 			<h2>Contact Me</h2>
